# RaNT-Graph

./: CMakeLists.txt  README.md
include/: RaNT_Graph.hpp  RaNT_Graph1.hpp  helpers.hpp  multi_alias_table.hpp
include/RMAT_generator/: helpers.hpp  kronecker_edge_generator.hpp  rmat_edge_generator.hpp
scripts/: alias_sampling.py
src/: CMakeLists.txt  delegated_k_path.cpp  delegated_k_path2.cpp  delegated_k_path3.cpp  experiments_to_run.txt  find_largest_v_id.cpp  no_rejection_sampling.cpp  param_test_k_path.cpp  random_walks.cpp  rant_graph_test.cpp  recurse_test  recursive_functor.cpp  undelegated_k_path.cpp  weighted_rant_graph_test.cpp  ygm_recursive_functor.cpp
